--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" ng-app>
+    <html lang="en" ng-app>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -13,26 +12,9 @@
 <div class="container" ng-controller="MyController">
 
     <div class="page-header">
-        <h1>Web Example</h1>
+        <h1>Where is your dream home located</h1>
     </div>
-
-    <div class="row">
-        <div class="col-md-3">
-            What is your favorite color?
-        </div>
-        <div class="col-md-3">
-            <form class="form-inline" ng-submit="postData()">
-                <input type="text" class="form-control" ng-model="color"
-                       placeholder="Enter a color">
-                <input type="submit" class="span1 btn btn-primary" value="Submit"
-                       ng-disabled="!color">
-            </form>
-        </div>
-        <div class="col-md-3">
-            {{ message }}
-        </div>
-    </div>
-
+    <div ng-show="done">You win!</div>
     <div class="row">
         <div class="col-sm-12 col-md-9">
             <hr>
@@ -41,21 +23,20 @@
 
     <div class="row">
         <div class="col-md-3">
-            What colors do people like?
-        </div>
-        <div class="col-md-3">
-            <button class="btn btn-primary" ng-click="getData()">Get colors</button>
+          
+            <button class="btn btn-primary" ng-click="getData()" ng-hide="currentQuestion">Get Questions</button>
         </div>
     </div>
     <div class="spacer"></div>
     <div class="row">
         <div class="col-sm-12 col-md-6">
-            <table class="table">
-                <tr ng-repeat="person in people">
-                    <td>{{ person.name }}</td>
-                    <td>{{ person.color }}</td>
-                </tr>
-            </table>
+            <div class= "panel panel-default">
+            <div class= "panel-heading" >{{ currentQuestion.question }}</div>
+            <div class= "panel-body">
+                <ul class= "list-group">
+            <li class= "clickable list-group-item" ng-repeat="answer in currentQuestion.answers" 
+            ng-click= "answerQuestion(answer.value)">
+                {{ answer.value }}
         </div>
     </div>
 </div>
