--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,10 @@
     <html lang="en" ng-app>
-<head>
+<head> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>EU Starter Project</title>
-
+     <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css">
@@ -12,9 +13,9 @@
 <div class="container" ng-controller="MyController">
 
     <div class="page-header">
-        <h1>Where is your dream home located</h1>
+        <h1>Your Dream House</h1>
     </div>
-    <div ng-show="done">You win!</div>
+    <div ng-show="done">{{message}}</div>
     <div class="row">
         <div class="col-sm-12 col-md-9">
             <hr>
@@ -24,22 +25,23 @@
     <div class="row">
         <div class="col-md-3">
           
-            <button class="btn btn-primary" ng-click="getData()" ng-hide="currentQuestion">Get Questions</button>
+            <button class="btn btn-secondary btn-lg" ng-click="getData()" ng-hide="currentQuestion">Get Questions</button>
         </div>
     </div>
     <div class="spacer"></div>
     <div class="row">
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6" ng-hide="!currentQuestion">
             <div class= "panel panel-default">
-            <div class= "panel-heading" >{{ currentQuestion.question }}</div>
-            <div class= "panel-body">
-                <ul class= "list-group">
-            <li class= "clickable list-group-item" ng-repeat="answer in currentQuestion.answers" 
-            ng-click= "answerQuestion(answer.value)">
-                {{ answer.value }}
+                <div class= "panel-heading" >{{ currentQuestion.question }}</div>
+                <div class= "panel-body">
+                    <ul class= "list-group">
+                        <li class= "clickable list-group-item" ng-repeat="answer in currentQuestion.answers" 
+                        ng-click= "answerQuestion(answer.value)">
+                        {{ answer.value }}</li>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    <img ng-src="/img/{{img}}.jpg" alt="Description" ng-hide="!done" />
 <script src="lib/jquery/dist/jquery.min.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="lib/angular/angular.min.js"></script>
