--- a/client/index.html
+++ b/client/index.html
@@ -1,25 +1,27 @@
 <!doctype html>
 <html lang="en" ng-app="app">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>EU Starter Project</title>
-     <link rel="stylesheet" type="text/css"
-          href="https://fonts.googleapis.com/css?family=Raleway">
+    <title> The Nathan B Hiss Quiz</title>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/base.css">
 </head>
-<body>
-    
-<div ng-view>
-    Loading...
-</div>
 
-<script src="lib/jquery/dist/jquery.min.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="lib/angular/angular.min.js"></script>
-<script src="lib/angular-route/angular-route.min.js"></script>
-<script src="js/base.js"></script>
+<body>
+
+    <div ng-view>
+        Oh no Donald Trump is coming hold on for your wall...
+    </div>
+
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular-route/angular-route.min.js"></script>
+    <script src="js/base.js"></script>
 </body>
+
 </html>
